refactor: decouple Container/Handler and overhaul Flux I/O logistics
- Separated `IFluxContainer` and `IFluxHandler` to strictly decouple storage state from input/output access logic.
- Streamlined and optimized most API methods across the board, reducing generic bloat and improving type safety.
- Redesigned `IFluxHandler.fill()` and `drain()` to modify the request resource in-place and return the actually transferred amount for symmetric operations.
- Validated capsule/bucket fluid interactions (fill/drain) using the new space reservation token system.
- Added the foundational prototype for `OpenSingleLiquidContainerInteraction` (GUI integration WIP).
- Implemented a temporary `SingleLiquidContainerInformationInteraction` to send container content messages to players until the custom UI is fully ready.